2006-03-18  Christopher Faylor  <cgf@timesys.com>

	* cygwinenv.sgml: Rename fork_retry to proc_retry since it has turned
	out to be more general than just fork.

2006-03-13  Christopher Faylor  <cgf@timesys.com>

	* cygwinenv.sgml: Explain about new fork_retry CYGWIN environment
	variable setting.

2006-03-07  Bas van Gompel  <cygwin-patch.buzz<at>bavag.tmfweb.nl>

	* cygwinenv.sgml: Add missing </para> at transparent_exe.

2006-02-05  Corinna Vinschen  <corinna@vinschen.de>

	* cygwinenv.sgml: Explain transparent_exe option.

2006-02-01  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* faq-setup.xml (faq.setup.what-packages): 
	Mention new cygcheck -p option.

2006-01-27  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* faq-programming.xml (faq.programming.building-cygwin): 
	Move cocom to the build requirements.

2006-01-26  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* faq-programming.xml (faq.programming.building-cygwin): 
	Simplify instructions, and remove tar usage basics.

2006-01-26  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* faq-programming.xml (faq.programming.ipc): Add new FAQ about
	cygserver and its relation to the "Bad system call" error.
	* faq-setup.xml (faq.setup.uninstall-all): Mention postgresql.
	* overview2.sgml: Update security info on shared memory.

2006-01-25  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* faq-programming.xml (faq.programming.building-cygwin): Add
	list of packages required for building and exact check instructions.
	* faq-setup.xml (faq.setup.uninstall-service): New instructions
	on uninstalling a cygwin service.
	(faq.setup.uninstall-all): Reference new service uninstall FAQ.

2006-01-25  Igor Peshansky  <pechtcha@cs.nyu.edu>

	* faq-setup.xml (faq.setup.snapshots): Rename DLL using Windows tools.

2006-01-18  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* Makefile.in : Remove references to old texinfo FAQ.
	* calls.texinfo : Remove.
	* changes.texinfo : Remove.